# parquet-analyzer

./: DockerFile  README.md  setup.cfg
data/output/: statistics.csv
data/raw/: training_data.parquet
notebooks/: services.ipynb
src/parquet/: load_parquet.py  stats_compute.py  util.py
tests/: test_load_parquet1.py
